# geo

./: README.md  TODO.md  atom.xml  index.html  robots.txt  rss.xml  sitemap.xml
apps/keks/backend/: Cargo.toml  Justfile  edi_to_queen.geojson  edi_to_queen_auto.geojson  edi_to_queen_ped.geojson  edinburgh_regions_auto.10.geojson  edinburgh_regions_auto.100.geojson  edinburgh_regions_ped.10.geojson  edinburgh_routes_auto.10.geojson  edinburgh_routes_auto.100.geojson  edinburgh_routes_auto.geojson  edinburgh_routes_ped.10.geojson  edinburgh_routes_ped.100.geojson  edinburgh_routes_ped.geojson  edinburgh_sample.10.ends.geojson  edinburgh_sample.10.starts.geojson  edinburgh_sample.100.ends.geojson  edinburgh_sample.100.starts.geojson  edinburgh_sample.1000.ends.geojson  edinburgh_sample.1000.starts.geojson  queen_to_dalkeith_auto.geojson  queen_to_dalkeith_ped.geojson
apps/keks/backend/api/: Cargo.toml
apps/keks/backend/cli/: Cargo.toml
apps/keks/backend/conversion/src/: projection.rs
apps/keks/backend/data/edinburgh/: edinburgh_regions_auto.100.geojson  edinburgh_regions_ped.100.geojson  edinburgh_sample.10.ends.geojson  edinburgh_sample.10.starts.geojson  regions_auto.100.geojson  regions_ped.100.geojson  routes_auto.100.geojson
apps/keks/backend/data/jerusalem/: regions_auto.100.geojson  regions_ped.100.geojson  routes_ped.100.geojson  sample.100.ends.geojson
apps/keks/backend/data/new_york/: regions_auto.100.geojson  regions_auto.1000.geojson  regions_ped.100.geojson  regions_ped.1000.geojson  routes_ped.100.geojson
apps/keks/backend/data/paris/: area.toml  regions_auto.100.geojson  regions_ped.100.geojson
apps/keks/backend/display/src/: lib.rs
apps/keks/backend/layout/: Cargo.toml
apps/keks/backend/layout/src/: lib.rs
apps/keks/backend/regions/: Cargo.toml
apps/keks/backend/regions/src/: contours.rs
apps/keks/backend/routing/: Cargo.toml
apps/keks/backend/routing/src/: stadia.rs
apps/keks/backend/startup/: Cargo.toml
apps/linzer/backend/: .dockerignore  .gitignore  Cargo.toml  Justfile  README.md  fly.toml
apps/linzer/backend/api/: Cargo.toml
apps/linzer/backend/cli/: Cargo.toml
apps/linzer/backend/config/: Cargo.toml  edinburgh.toml  hamburg.toml
apps/linzer/backend/config/src/: lib.rs
apps/linzer/backend/conversion/: Cargo.toml
apps/linzer/backend/data/edinburgh/: regions_auto.100.geojson  routes_auto.100.geojson  routes_ped.100.geojson  routes_pedestrian.100.geojson
apps/linzer/backend/data/jerusalem/: regions_auto.100.geojson  routes_auto.100.geojson  sample.100.starts.geojson
apps/linzer/backend/data/new_york/: regions_auto.100.geojson  regions_ped.1000.geojson  routes_auto.100.geojson  routes_ped.1000.geojson  sample.100.ends.geojson
apps/linzer/backend/data/paris/: regions_auto.100.geojson  regions_auto.1000.geojson  routes_auto.100.geojson  sample.100.ends.geojson  sample.100.starts.geojson
apps/linzer/backend/display/: Cargo.toml
apps/linzer/backend/display/src/: lib.rs
apps/linzer/backend/layout/: Cargo.toml
apps/linzer/backend/layout/src/: lib.rs
apps/linzer/backend/output/edinburgh/: regions_ped.100.geojson
apps/linzer/backend/output/hamburg/: sample.1000.ends.geojson
apps/linzer/backend/output/jerusalem/: sample.1000.ends.geojson  sample.1000.starts.geojson
apps/linzer/backend/output/new_york/: sample.100.starts.geojson
apps/linzer/backend/output/paris/: regions_ped.100.geojson  routes_ped.100.geojson  sample.1000.ends.geojson
apps/linzer/backend/overturemaps/: Cargo.toml
apps/linzer/backend/overturemaps/src/: lib.rs  overturemaps.rs
apps/linzer/backend/regions/: Cargo.toml
apps/linzer/backend/regions/src/: lib.rs
apps/linzer/backend/routing/: Cargo.toml
apps/linzer/backend/routing/src/: bounds.rs  lib.rs
apps/linzer/backend/startup/: Cargo.toml
apps/linzer/backend/water/: Cargo.toml
apps/linzer/web/centroids/: Cargo.toml
apps/linzer/web/centroids/src/: annotated.rs  annotated_js.rs  geometry.rs  lib.rs  load.rs  region_group.rs  region_source_js.rs  region_summary.rs  region_summary_js.rs  regions.rs  testcard.rs
apps/linzer/web/rust/web/: Cargo.toml
apps/pandan/backend/: Cargo.toml  Justfile
apps/pandan/backend/green/: Cargo.toml
apps/pandan/backend/output/amsterdam/: green.geojson
apps/pandan/backend/output/berlin/: green.geojson
apps/pandan/backend/output/copenhagen/: green.geojson
apps/pandan/backend/output/edinburgh/: green.geojson
apps/pandan/backend/output/gothemburg/: green.geojson
apps/pandan/backend/output/hamburg/: green.geojson
apps/pandan/backend/output/jerusalem/: green.geojson
apps/pandan/backend/output/new_york/: green.geojson
apps/pandan/backend/output/paris/: green.geojson
apps/pandan/backend/output/ronneburg/: green.geojson
apps/pandan/backend/output/stockholm/: green.geojson
questions/de_nsew_travel/: .gitignore  2025-12-26.py  Justfile  berlin_city_pairs_diff_quadrant.parquet  berlin_city_pairs_diff_quadrant_travel_times.parquet  city_pairs_diff_quadrant.parquet  city_pairs_diff_quadrant_travel_times.parquet  eda1.py  eda2.py  eda3.py  from_scratch1.py  main.py  pyproject.toml  routes.parquet  routes_travel_times.parquet  travel_client.py
questions/de_nsew_travel/motis_client/: Cargo.toml
questions/de_nsew_travel/motis_client/src/: main.rs
shared/geo-shell/: .gitignore  Cargo.toml
shared/geo-shell/src/: config.rs  lib.rs  tracing.rs
shared/geo-shell/tests/: integration_test.rs
spikes/mgmSep2025/workspace1/: Justfile  direct_access.ipynb  geopandas_example.ipynb  kings_cross_area_buildings.ipynb  kings_cross_area_subway_stations.ipynb  kings_cross_area_subway_stations_h3.ipynb  lonboard_example.ipynb  london_segments.ipynb  london_segments_and_connectors.ipynb  london_subway_stations.ipynb  pyproject.toml
spikes/mgmSep2025/workspace2/: .gitignore  Justfile  _quarto.yml  direct_loading.ipynb  direct_loading_arrow.ipynb  pyproject.toml  tube.html  tube.ipynb
spikes/mgmSep2025/workspace3/: Justfile  lonboard_play.py  pyproject.toml  tube.py
spikes/satellite/eopf-stac-python/: main.py  pyproject.toml
web/: Justfile  (+2 more)
(+252 files in other folders)
