[project]
name = "de-nsew-travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "anthropic>=0.75.0",
    "duckdb>=1.4.3",
    "folium>=0.12",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "lonboard>=0.13.0",
    "mapclassify>=2.10.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "overturemaps>=0.18.0",
    "pandas>=2.3.3",
    "polyline>=2.0.4",
    "pyhafas>=0.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "traveltimepy>=4.4.0",
]

[tool.marimo.runtime]
output_max_bytes = 50_000_000