[package]
name = "geo-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
geo = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

geo-overturemaps = { path="../geo-overturemaps" }
