[workspace]
members = ["api", "cli", "config", "conversion", "display", "layout", "overturemaps", "regions", "routing", "startup", "water"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

ferrostar = "0.10"
url = "2.5"

clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"

geo = "0.30"
geojson = { version = "0.24", features = ["geo-types"] }
geozero = { version = "0.14", features = ["with-wkb"] }
geoarrow = { version="0.3.0", features = ["geozero"] }
arrow-schema = "=53.2.0"
arrow-array = "=53.2.0"
datafusion = "43.0.0"
arrow = { version = "=53.2.0", features = ["prettyprint"] }
futures = "0.3.31"

rand = "0.8"

tiny-skia = "0.11"
image = "0.25"
imageproc = "0.25"

thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

chrono = "= 0.4.38"

