[workspace]
members = ["cli", "conversion", "display", "layout", "overturemaps", "regions", "routing", "startup", "water"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }

ferrostar = "0.10"
url = "2.5"

clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
tracing = "0.1"

geo = "0.30"
geojson = { version = "0.24", features = ["geo-types"] }
geozero = { version = "0.14", features = ["with-wkb"] }

rand = "0.8"

tiny-skia = "0.11"
image = "0.25"
imageproc = "0.25"

thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

geo-config = { path="../../../shared/geo-config" }
geo-overturemaps = { path="../../../shared/geo-overturemaps" }