[workspace]
resolver = "3"
members = ["green"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tokio = { version="1.46", features = ["full"] }

geo-shell = { path="../../../shared/geo-shell" }
geo-overturemaps = { path="../../../shared/geo-overturemaps" }

