[project]
name = "workspace1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.0",
    "duckdb-engine>=0.17.0",
    "geopandas>=1.1.1",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "lonboard>=0.12.1",
    "matplotlib>=3.10.6",
    "overturemaps>=0.17.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "shapely>=2.1.2",
    "toml>=0.10.2",
]
