[project]
name = "eopf-stac-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pystac>=1.13.0",
    "pystac-client>=0.9.0",
    "requests>=2.32.4",
]

[tool.black]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
