[package]
name = "regions"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
geozero = { workspace = true }

startup = { path = "../startup" }
cli = { path = "../cli" }
image = "0.25.2"
imageproc = "0.25.0"
flo_draw = "0.3.1"
flo_canvas = "0.3.1"
flo_render_canvas = "0.3.1"
futures = "0.3.30"

