[package]
name = "routing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ferrostar = { workspace = true }
clap = { workspace = true }
url = { workspace = true }

startup = { path = "../startup" }
cli = { path = "../cli" }

reqwest = "0.12.7"
geo = "0.28.0"
geojson = { version = "0.24", features = ["geo-types"] }
geozero = "0.13.0"
rand = "0.8.5"
