[package]
name = "overturemaps"
version = "0.1.0"
edition = "2021"

[dependencies]
geozero = { workspace = true }
serde = { workspace = true }
geo = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

datafusion = { workspace = true }
arrow = { workspace = true }
futures = { workspace = true }

