[package]
name = "overturemaps"
version = "0.1.0"
edition = "2024"

[dependencies]
geozero = { workspace = true }
serde = { workspace = true }
geo = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

datafusion = "46.0.0"
arrow = { version = "54.2.1", features = ["prettyprint"] }
futures = "0.3.31"

