[package]
name = "regions"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
geozero = { workspace = true }
rand = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
geo-shell = { workspace = true }

cli = { path = "../cli" }
conversion = { path = "../conversion" }

bit-set = "0.8"

