[package]
name = "routing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
ferrostar = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
rand = { workspace = true }

startup = { path = "../startup" }
cli = { path = "../cli" }

datafusion = "46.0.0"
arrow = { version = "54.2.1", features = [
    "prettyprint"
] }
reqwest = "0.12"
fast_poisson = "1.0"
bytes = "1.8"
toml = "0.8"
serde = "1.0"
futures = "0.3.31"
