[package]
name = "routing"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
ferrostar = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
geo-config = { workspace = true }
geo-overturemaps = { workspace = true }

startup = { path = "../startup" }
cli = { path = "../cli" }
overturemaps = { path = "../overturemaps" }

reqwest = "0.12"
fast_poisson = "1.0"
bytes = "1.8"

