[package]
name = "water"
version = "0.1.0"
edition = "2024"

[dependencies]
geozero = { workspace = true }
geo = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

overturemaps = { path = "../overturemaps" }
config = { path = "../config" }
